--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,6 +8,7 @@
     "react": "^16.6.3",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.6.3",
+    "react-intl-universal": "^1.15.3",
     "react-scripts": "2.1.1"
   },
   "scripts": {
